# ocr_trt

./: CMakeLists.txt  README.md  clipper.cpp  clipper.h  ocr_det.cpp  ocr_rec.cpp  postprocess_op.cpp  postprocess_op.h  utility.cpp  utility.h
